--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ yarn-error.log*
 
 # Local Netlify folder
 .netlify
+src/img/profile.png
+src/img/profile.png
+src/img/profile.jpg
+src/img/about.avif
+src/img/about.avif
